test: add TaskService unit tests